<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="registration_screen_username_hint_text">Username</string>
    <string name="registration_screen_email_hint_text">Email</string>
    <string name="registration_screen_password_hint_text">Password</string>
    <string name="registration_screen_re_password_hint_text">Repeat Password</string>
    <string name="registration_screen_register_btn_text">Register</string>
</resources>